--- a/app/src/main/res/layout/gen_fragment.xml
+++ b/app/src/main/res/layout/gen_fragment.xml
@@ -2,108 +2,121 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
-    <TextView
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:gravity="center"
-        android:text="@string/generate_title"
-        android:textSize="30sp" />
+        android:orientation="horizontal"
+        android:weightSum="2">
+
+        <EditText
+            android:id="@+id/etWalletName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="@string/generate_name_hint"
+            android:imeOptions="actionNext"
+            android:inputType="text"
+            android:maxLines="1"
+            android:textAlignment="center"
+            android:textSize="16sp" />
+
+        <EditText
+            android:id="@+id/etWalletPassword"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="@string/generate_password_hint"
+            android:imeOptions="actionNext"
+            android:inputType="text"
+            android:textAlignment="center"
+            android:textSize="16sp" />
+    </LinearLayout>
 
     <EditText
-        android:id="@+id/etWalletName"
+        android:id="@+id/etWalletMnemonic"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:backgroundTint="@color/colorPrimary"
-        android:focusable="true"
-        android:gravity="center"
-        android:hint="@string/generate_name"
-        android:imeOptions="actionDone"
+        android:hint="@string/generate_mnemonic_hint"
+        android:imeOptions="actionNext"
         android:inputType="text"
-        android:maxLines="1"
-        android:textIsSelectable="true"
-        android:textSize="24sp" />
+        android:scrollHorizontally="false"
+        android:textAlignment="center"
+        android:textSize="16sp" />
 
     <EditText
-        android:id="@+id/etWalletPassword"
+        android:id="@+id/etWalletAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:backgroundTint="@color/colorPrimary"
-        android:focusable="true"
-        android:gravity="center"
-        android:hint="@string/generate_password"
-        android:imeOptions="actionDone"
+        android:hint="@string/generate_address_hint"
+        android:imeOptions="actionNext"
         android:inputType="text"
-        android:maxLines="1"
-        android:textIsSelectable="true"
-        android:textSize="24sp" />
+        android:textAlignment="center"
+        android:textSize="16sp" />
+
+    <LinearLayout
+        android:id="@+id/llRestoreKeys"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:visibility="invisible">
+
+        <EditText
+            android:id="@+id/etWalletViewKey"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:hint="@string/generate_viewkey_hint"
+            android:imeOptions="actionNext"
+            android:inputType="text"
+            android:textAlignment="center"
+            android:textSize="16sp" />
+
+        <EditText
+            android:id="@+id/etWalletSpendKey"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/generate_spendkey_hint"
+            android:imeOptions="actionNext"
+            android:inputType="text"
+            android:textAlignment="center"
+            android:textSize="16sp" />
+    </LinearLayout>
+
+    <EditText
+        android:id="@+id/etWalletRestoreHeight"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/generate_restoreheight_hint"
+        android:imeOptions="actionNext"
+        android:inputType="number"
+        android:textAlignment="center"
+        android:textSize="16sp"
+        android:visibility="invisible" />
 
     <Button
         android:id="@+id/bGenerate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
         android:layout_marginTop="8dp"
         android:background="@color/colorPrimary"
+        android:enabled="false"
         android:text="@string/generate_buttonGenerate" />
 
-    <LinearLayout
-        android:id="@+id/llAccept"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:visibility="visible">
-
-        <TextView
-            android:id="@+id/tvWalletAddress"
-            android:textIsSelectable="true"
-            android:selectAllOnFocus="true"
+    <!--    <Button
+            android:id="@+id/bReset"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/generate_address_placeholder"
-            android:textAlignment="center"
-            android:textColor="@color/menu_background_color"
-            android:textSize="12sp" />
-
-        <TextView
-            android:id="@+id/tvWalletMnemonic"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/generate_mnemonic_placeholder"
-            android:textAlignment="center"
-            android:textColor="@color/menu_background_color"
-            android:textSize="20sp" />
-
-        <Button
-            android:id="@+id/bAccept"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:background="@color/colorPrimary"
-            android:text="@string/generate_buttonAccept" />
-    </LinearLayout>
+            android:text="@string/generate_button_reset" />
+    -->
 </LinearLayout>
