--- a/app/src/main/res/layout/gen_fragment.xml
+++ b/app/src/main/res/layout/gen_fragment.xml
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/generate_mnemonic_hint"
         android:imeOptions="actionNext"
-        android:inputType="text"
+        android:inputType="textMultiLine"
         android:textAlignment="center"
         android:textSize="16sp" />
 
@@ -50,7 +50,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/generate_address_hint"
         android:imeOptions="actionNext"
-        android:inputType="text"
+        android:inputType="textMultiLine"
         android:textAlignment="center"
         android:textSize="16sp" />
 
@@ -68,7 +68,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/generate_viewkey_hint"
             android:imeOptions="actionNext"
-            android:inputType="text"
+            android:inputType="textMultiLine"
             android:textAlignment="center"
             android:textSize="16sp" />
 
@@ -78,7 +78,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/generate_spendkey_hint"
             android:imeOptions="actionNext"
-            android:inputType="text"
+            android:inputType="textMultiLine"
             android:textAlignment="center"
             android:textSize="16sp" />
     </LinearLayout>
