tx key + tweaks

--- a/app/src/main/res/layout/gen_fragment.xml
+++ b/app/src/main/res/layout/gen_fragment.xml
@@ -88,7 +88,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/generate_restoreheight_hint"
-        android:imeOptions="actionNext"
+        android:imeOptions="actionDone"
         android:inputType="number"
         android:textAlignment="center"
         android:textSize="16sp"
