--- a/app/src/main/res/layout/wallet_fragment.xml
+++ b/app/src/main/res/layout/wallet_fragment.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.constraint.ConstraintLayout
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -39,6 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
             android:text="@string/label_unlockedBalance"
+            android:textColor="@color/colorAccent"
             android:textSize="10sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/tvUnlockedBalance"
             app:layout_constraintRight_toLeftOf="@+id/tvUnlockedBalance" />
@@ -49,6 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:text="00000000.000000000000"
+            android:textColor="@color/colorAccent"
             app:layout_constraintRight_toRightOf="@+id/tvBalance"
             app:layout_constraintTop_toBottomOf="@+id/tvBalance" />
 
@@ -61,7 +62,7 @@
             android:text="Loading..."
             android:textSize="10sp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintBaseline_toBaselineOf="@+id/tvBalance" />
 
         <TextView
             android:id="@+id/tvBlockHeightProgress"
@@ -72,7 +73,7 @@
             android:text="Loading..."
             android:textSize="10sp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvConnectionStatus" />
+            app:layout_constraintBaseline_toBaselineOf="@+id/tvUnlockedBalance"/>
 
     </android.support.constraint.ConstraintLayout>
 
@@ -101,13 +102,13 @@
             android:progress="0" />
     </LinearLayout>
 
-    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.constraint.ConstraintLayout
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+        <android.support.v7.widget.RecyclerView
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/list"
