deal with pending transactions

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,8 @@
     <color name="main_background">#f0eeef</color>
     <color name="menu_background_color">#1c1c1c</color>
 
-
     <color name="tx_green">#36b05b</color>
     <color name="tx_red">#ff4f41</color>
+    <color name="tx_pending">#FF4081</color>
 
 </resources>
